# gemini-writer

./: .env  .sesskey  agent.py  app.py  components.py  debug_app.py  kimi-writer.py  pyproject.toml  reproduce_issue.py  utils.py
data/: chat_history.db  settings.json
static/: style.css
templates/: index.html
tools/: __init__.py  compression.py  project.py  write_file.py
